--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,14 +8,15 @@
 </head>
 <body>
   <h1>Card Guessing Game</h1>
-  <button id="reset-button" onclick="window.location.reload()">Reset Game</button>
+  <div id="timer">Time: 00:00:00</div>
+  <button id="reset-button">Reset Game</button>
+  
   <div id="game-board">
     <% cards.forEach((card, index) => { %>
-      <div class="card" data-card-value="<%= card %>" onclick="selectCard(this)">
-        <span class="card-content"><%= card %></span>
-      </div>
+      <div class="card" data-card-value="<%= card %>" onclick="selectCard(this)"></div>
     <% }) %>
   </div>
+
   <script src="/script.js"></script>
 </body>
 </html>
